src/App.css
html {
  background-color: darkblue;
  justify-content: center;

}
.container-fluid {
  padding-right: 0px;
}
.full-page {
  background-color: darkblue;
  color: black;
  height: 100vh;
  width: 100%;
  padding: 15px 0;
  position: relative;
}
.card, .input-group {
  margin: 0 auto;
}
.center-row {
  justify-content: center;
  text-align: center;
  color: white;
}
.card {
  border: 3px solid gold;
  background-color: lightgray;
  padding: 3px 12px;
}
.card-body {
  font-size: 12px;
}
.bio {
  font-size: 9px;
  font-style: italic;
  background-color: gold;
  padding: 2px;
}
.holographic {
  border: 3px solid gold;
  border-radius: 3px;
  background-image: url('./images/holo.png');
}
.holographic:hover {
  cursor: pointer;
}
.page-footer {
  border-top: 1px solid white;
  background-color: darkblue;
  color: white;
  position: absolute;
  bottom: 0;
  width: 100%;
}
.row a {
  margin-left: 3px;
}
a {
  color: yellow;
  font-weight: bold;
}
a:hover {
  color: yellow;
}
.row {
  margin: 0;
}
.flex-column {
  position: absolute;
  z-index: 1;
  color: white;
  font-weight: bold;
  padding-left: 5px;
  font-family: 'Andale Mono', Courier, monospace;
}
.flex-column .nav-item:hover {
  text-decoration: underline;
  cursor: pointer;
}
.poke-span {
  margin-left: 4px;
  font-weight: bold;
}
.poke-row {
  overflow: scroll;
}

